--- a/public (중급반)/index.html
+++ b/public (중급반)/index.html
@@ -25,7 +25,35 @@
 </head>
 <body>
 
-
+<ul class="zoom">
+    <li class="large">
+        <img class="img" src="img/img1.jpg" alt="캡틴아메리카" />
+        <img class="title" src="img/title1.png" alt="Cap America" />
+    </li>
+    <li class="large">
+        <img class="img" src="img/img2.jpg" alt="아이언맨" />
+        <img class="title" src="img/title2.png" alt="Iron Man" />
+    </li>
+    <li>
+        <img src="img/img3.jpg" alt="마블" />
+    </li>
+    <li>
+        <img class="img" src="img/img4.jpg" alt="스칼렛위치" />
+        <img class="title" src="img/title3.png" alt="Scarlet Witch" />
+    </li>
+    <li>
+        <img class="img" src="img/img5.jpg" alt="스파이더맨" />
+        <img class="title" src="img/title4.png" alt="Spider Man" />
+    </li>
+    <li>
+        <img class="img" src="img/img6.jpg" alt="블랙팬서" />
+        <img class="title" src="img/title5.png" alt="Black Panther" />
+    </li>
+    <li>
+        <img class="img" src="img/img7.jpg" alt="윈터 솔져" />
+        <img class="title" src="img/title6.png" alt="Winter Soldier" />
+    </li>
+</ul>
 
 </body>
 </html>
